<resources>
    <string name="app_name">Faithconx</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logIn">Log in</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login With FaceBook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_one">Create one.</string>
    <string name="signup">SignUp</string>
    <string name="first_name">First Name*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="termsAndCondition">I accept terms and conditions and privacy policies.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="new_post">New Post</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="church_of_atlanta">CHURCH OF ATLANTA</string>
    <string name="should_we_all_pray_everyday">Should We All Pray Everyday</string>
    <string name="loginWithPhoneNumber">Login With Phone Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter OTP.</string>
    <string name="wrongOtpEntered">Wrong otp entered.</string>
    <string name="get_otp">Get OTP.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages">Messages</string>
    <string name="maniProfile">PROFILE</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="btnContinue">Continue</string>
    <string name="username">\@sultanalmaadeed</string>
    <string name="empty" />
    <string name="do_you_want_to_logout">Do you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="field_cannot_be_empty">Field cannot be empty.</string>
    <string name="email_or_password_is_wrong">Email or password is wrong.</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="login_with_email">Login With Email</string>
    <string name="password_is_too_weak">Password is too weak use combination of[1,A,a,@,$,_,].</string>
    <string name="bad_email_format">Bad email format.</string>
    <string name="white_spaces_are_not_allowed">White Spaces are not allowed.</string>
    <string name="firstname_too_large">Firstname too Large.</string>
    <string name="firstname_too_small">Firstname too small.</string>
    <string name="password_doesn_t_match">Password doesn\'t match.</string>
</resources>