<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/newPostMenu"
        android:icon="@drawable/ic_new_post"
        android:title="@string/new_post"

        app:showAsAction="always"/>

    <item
        android:id="@+id/chatMenu"
        android:icon="@drawable/ic_chat_icon"
        android:title="@string/chat"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profileMenu"
        android:icon="@drawable/ic_profile_menu"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>