<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.ui.ActivitySignup">
    <!-- HORIZONTAL GUIDELINE-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/sixteenDp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/sixteenDp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRowOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRowTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
    <!-- VERTICAL GUIDELINE-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/sixteenDp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/sixteenDp" />
    <!--ROW ONE-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyFiveDp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/signup"
        android:textColor="@color/eerieBlack"
        android:textSize="@dimen/twentyFourSp"
        app:layout_constraintStart_toStartOf="@id/btnClose"
        app:layout_constraintTop_toBottomOf="@id/btnClose" />
    <!-- GROUPING -->
    <!--ROW TWO-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFirstName"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/first_name"
        app:startIconDrawable="@drawable/ic_profile"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintEnd_toStartOf="@+id/tilLastName"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineRowOne">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLastName"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/last_name"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tilEmail"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/tilFirstName"
        app:layout_constraintTop_toTopOf="@id/tilFirstName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tilPhoneNumber"
        app:layout_constraintEnd_toEndOf="@id/tilLastName"
        app:layout_constraintStart_toStartOf="@+id/tilFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/tilFirstName"
        app:layout_constraintTop_toTopOf="@+id/tilPhoneNumber"
        app:layout_constraintEnd_toStartOf="@+id/tilPhoneNumber"
        app:layout_constraintBottom_toBottomOf="@+id/tilPhoneNumber"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/phone_number"
        app:startIconDrawable="@drawable/ic_smartphone"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilLastName"
        app:layout_constraintStart_toEndOf="@+id/ccp"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:maxLength="10"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_password"
        app:passwordToggleEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/tilConfirmPassword"
        app:layout_constraintEnd_toEndOf="@id/tilLastName"
        app:layout_constraintStart_toStartOf="@+id/tilFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tilPhoneNumber">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/ic_confirm_password"
        app:passwordToggleEnabled="true"
        app:helperTextTextColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/checkboxTermsAndCondition"
        app:layout_constraintEnd_toEndOf="@id/tilLastName"
        app:layout_constraintStart_toStartOf="@+id/tilFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkboxTermsAndCondition"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/zeroDp"
        android:buttonTint="@color/american_yellow"
        android:text="@string/termsAndCondition"
        android:fontFamily="@font/product_sans_regular"
        android:textSize="@dimen/fifteenSp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineRowTwo"
        app:layout_constraintEnd_toEndOf="@id/tilLastName"
        app:layout_constraintStart_toStartOf="@+id/tilFirstName"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"/>
    <!--ROW THREE-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/american_yellow"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/btnContinue"
        android:textColor="@color/white"
        android:background="@drawable/btn_round_shape"
        android:layout_marginTop="@dimen/tenDp"

        android:padding="@dimen/fifteenDp"
        android:textAppearance="@style/btnBaseStyle"

        android:layout_marginStart="@dimen/fiveDp"
        android:layout_marginEnd="@dimen/fiveDp"
        app:layout_constraintTop_toTopOf="@id/guidelineRowTwo"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        />


</androidx.constraintlayout.widget.ConstraintLayout>