<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ActivityLogin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/sixteenDp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRowOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRowTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="658dp" />

    <!--    Row one-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_icon"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBrandLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/guidelineRowOne"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:srcCompat="@drawable/brandlogo_img" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineRowOne">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="20dp"
            android:labelFor="@id/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/fifteenDp"
            android:textAppearance="@style/styleEditText"
            android:textSize="@dimen/fifteenSp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawableEnd="@drawable/open_eye"
            android:drawablePadding="20dp"
            android:labelFor="@id/password"
            android:inputType="textPassword"
            android:padding="@dimen/fifteenDp"
            android:textAppearance="@style/styleEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/bluebonnet"
        android:textSize="@dimen/thirteenSp"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <!--    Horizontal line START-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/american_yellow"
        android:fontFamily="@font/product_sans_bold"
        android:padding="@dimen/twentyDp"
        android:text="@string/logIn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/FourteenSp"
        app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/emailInputLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

    <View
        android:id="@+id/leftDivider"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/oneDp"
        android:layout_marginTop="20dp"
        android:background="@color/coolGrey"
        app:layout_constraintEnd_toStartOf="@+id/textOr"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/or"
        android:textColor="@color/spaceCadet"
        android:textSize="@dimen/fifteenSp"
        app:layout_constraintEnd_toStartOf="@+id/rightDivider"
        app:layout_constraintStart_toEndOf="@+id/leftDivider"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <View
        android:id="@+id/rightDivider"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="@dimen/oneDp"
        android:layout_marginTop="20dp"
        android:background="@color/coolGrey"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@id/textOr"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"

        />
    <!--    Horizontal line END-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginWithFaceBook"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/chineseBLue"
        android:drawableLeft="@drawable/facebook"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/twentyDp"
        android:text="@string/login_with_facebook"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fifteenSp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/leftDivider" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginWithGoogle"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/twentyDp"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/fifteenSp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLoginWithFaceBook" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLoginWithPhoneNumber"
        android:layout_width="@dimen/zeroDp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mediumSlateBLue"
        android:drawableLeft="@drawable/call_icon"
        android:fontFamily="@font/poppins_medium"
        android:padding="@dimen/twentyDp"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fifteenSp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLoginWithGoogle" />
    <!--    Row Three-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dontHaveAnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/product_sans_regular"
        android:textColor="@color/coolGrey"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/createOne"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnLoginWithPhoneNumber"
        app:layout_constraintTop_toTopOf="@id/guidelineRowTwo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/createOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_one"
        android:fontFamily="@font/product_sans_bold"
        android:textColor="@color/cinnabar"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginWithPhoneNumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/dontHaveAnAccount"
        app:layout_constraintTop_toTopOf="@id/guidelineRowTwo" />


</androidx.constraintlayout.widget.ConstraintLayout>